add duoshuo module in blog

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -136,7 +136,7 @@
     </ul>
   </footer>
 
-  <script type="text/javascript">
+  <!--script type="text/javascript">
     var _gaq = _gaq || [];
     _gaq.push(['_setAccount', 'UA-40867989-1']);
     _gaq.push(['_trackPageview']);
@@ -166,7 +166,7 @@
     {
       window.top.location.replace(window.self.location.href);
     }
-  </script>
+  </script-->
 
   <!--
   <script id="_webengage_script_tag" type="text/javascript">
