--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -93,18 +93,18 @@ $(function () {
 <section class="comments inner">
 
 <!-- Duoshuo Comment BEGIN -->
-	<div class="ds-thread"></div>
-<!--script type="text/javascript">
+	<div class="ds-thread" data-thread-key="{{ page.id }}" data-title="{{ page.title }}" data-url="hi-github.github.io{{ page.url }}"></div>
+<script type="text/javascript">
 var duoshuoQuery = {short_name:"jiangyantao"};
 	(function() {
 		var ds = document.createElement('script');
 		ds.type = 'text/javascript';ds.async = true;
-		ds.src = 'http://static.duoshuo.com/embed.js';
+		ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
 		ds.charset = 'UTF-8';
 		(document.getElementsByTagName('head')[0] 
-		|| document.getElementsByTagName('body')[0]).appendChild(ds);
+		 || document.getElementsByTagName('body')[0]).appendChild(ds);
 	})();
-	</script-->
+	</script>
 <!-- Duoshuo Comment END -->
 
 <!-- Disqus Comment BEGIN -->
