update about page and books pages

--- a/_layouts/simplePage.html
+++ b/_layouts/simplePage.html
@@ -85,13 +85,29 @@
 
   <div  style="border-bottom: 1px solid #ddd"></div>
     <footer>
+    <p class="linkings">
+        Friend: <a href="http://audiebantzhan.github.io/">audiebantzhan</a>
+    </p>
+    <p class="linkings">
+        Database: <a href="#">XXX</a>
+    </p>
+    <p class="linkings">
+        Utils: <a href="#">@@@@</a>
+    </p>
+    <!--p>
+      Made with <a href="http://jekyllrb.com/">Jekyll</a>,
+      hosted on <a href="https://github.com/willard-yuan/willard-yuan.github.io">Github Pages</a>. Theme inspired by <a href="http://ssaunier.github.io">ssaunier</a>.
+    </p-->
+    <!--/p>
+      <a href="http://www.github.com/"><img src="http://www.easycounter.com/counter.php?willard" border="0" alt="Website Hit Counter"></a> since Aug 2014.
+    </p-->
     <ul class="links">
-      <!--li>
-        <a href="https://github.com/willard-yuan" title="See my code on GitHub">
-          <i class="icon-github"></i>
+      <li>
+        <a href="https://github.com/hi-github" title="See my code on GitHub">
+          <i class="icon-github"></i> Joined on 4 Aug 2014
         </a>
       </li>	  
-      <li>
+      <!--li>
         <a href="https://twitter.com/intent/follow?screen_name=yongyuan001" title="Follow me on Twitter">
           <i class="icon-twitter"></i>
         </a>
@@ -119,7 +135,7 @@
     </ul>
   </footer>
 
-  <script type="text/javascript">
+  <!--script type="text/javascript">
     var _gaq = _gaq || [];
     _gaq.push(['_setAccount', 'UA-40867989-1']);
     _gaq.push(['_trackPageview']);
@@ -149,7 +165,7 @@
     {
       window.top.location.replace(window.self.location.href);
     }
-  </script>
+  </script-->
 
 </body>
 </html>
