update book page

--- a/_layouts/simplePage.html
+++ b/_layouts/simplePage.html
@@ -89,10 +89,10 @@
         Friend: <a href="http://audiebantzhan.github.io/">audiebantzhan</a>&nbsp&nbsp<a href="https://github.com/EncodeTheWoldDecodeMyself/">ZhaoPengChong</a>
     </p>
     <p class="linkings">
-        Database: <a href="#">XXX</a>
+        Database: <a href="https://github.com/Trinea/android-open-project">android-open-project</a>
     </p>
     <p class="linkings">
-        Utils: <a href="#">@@@@</a>
+        Utils: <a href="https://github.com/hi-github/GsonLibrary">GsonLibrary</a>&nbsp&nbsp<a href="https://github.com/hi-github/ormlite-core-android">ormlite-core-android</a>
     </p>
     <!--p>
       Made with <a href="http://jekyllrb.com/">Jekyll</a>,
