--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -105,7 +105,7 @@
     <ul class="links">
       <li>
         <a href="https://github.com/hi-github" title="See my code on GitHub">
-          <i class="icon-github"></i> Joined on 4 Aug 2014
+          <i class="icon-github"></i>
         </a>
       </li>	  
       <!--li>
@@ -117,13 +117,13 @@
         <a href="https://www.linkedin.com/in/sebastiensaunier" title="Connect with me on LinkedIn">
           <i class="icon-linkedin"></i>
         </a>
-      </li>
+      </li-->
       <li>
-        <a href="https://plus.google.com/+SebastienSaunier?rel=author" title="I need this link for authorship reasons">
+        <a href="https://plus.google.com/u/0/118199098247024928871/posts" title="I need this link for authorship reasons">
           <i class="icon-google-plus"></i>
         </a>
       </li>
-      <li>
+      <!--li>
         <a href="https://pinboard.in/u:ssaunier" title="Browse my bookmarks about Programming">
           <i class="icon-bookmarks"></i>
         </a>
