--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -112,12 +112,12 @@
         <a href="https://twitter.com/intent/follow?screen_name=yongyuan001" title="Follow me on Twitter">
           <i class="icon-twitter"></i>
         </a>
-      </li>
-      <li>
-        <a href="https://www.linkedin.com/in/sebastiensaunier" title="Connect with me on LinkedIn">
-          <i class="icon-linkedin"></i>
-        </a>
       </li-->
+      <li>
+        <a href="https://www.facebook.com/jiangyantao" title="Connect with me on facebook">
+          <i class="icon-facebook"></i>
+        </a>
+      </li>
       <li>
         <a href="https://plus.google.com/u/0/118199098247024928871/posts" title="I need this link for authorship reasons">
           <i class="icon-google-plus"></i>
