--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -119,7 +119,7 @@
         </a>
       </li>
       <li>
-        <a href="https://plus.google.com/u/0/118199098247024928871/posts" title="I need this link for authorship reasons">
+        <a href="https://plus.google.com/+JiangYantao8/posts" title="I need this link for authorship reasons">
           <i class="icon-google-plus"></i>
         </a>
       </li>
